Playing with the Nokia screen
You can find more info at:
* https://www.youtube.com/watch?v=E6PUa4n2DnA
* http://playground.arduino.cc/Code/PCD8544#.Uyn-2oWa9Ug

--- a/Masken.vcxproj.filters
+++ b/Masken.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Visual Micro\.Masken.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="font.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Algorithm.txt" />
