--- a/Masken.vcxproj.filters
+++ b/Masken.vcxproj.filters
@@ -16,12 +16,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Masken.ino" />
+    <None Include="PhilipsPCD8544.ino" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Visual Micro\.Masken.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="font.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhilipsPCD8544.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
